--- a/1stclass/bulma/bulma-layout.html
+++ b/1stclass/bulma/bulma-layout.html
@@ -155,14 +155,25 @@
                 </li>
               </ul>
             </div>
-          <div class="panel-block">
-            <p class="control has-icons-left">
-              <input class="input is-primary" type="text" placeholder="New Task">
-              <span class="icon is-left">
-                <i class="fas fa-calendar-plus" aria-hidden="true"></i>
-              </span>
-            </p>
-          </div>
+            <div class="panel-block">
+
+              <div class="field has-addons " style="width: 100%;">
+                <div class="control has-icons-left is-expanded">
+                    <input class="input is-primary" type="text" placeholder="New Task">
+                    <span class="icon is-left">
+                        <i class="fas fa-calendar-plus" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="control">
+                    <a class="button is-primary">
+                        Add
+                    </a>
+                </div>
+
+              </div>
+
+
+            </div>
           <a class="panel-block" style="color: blue;" >
               <input type="checkbox" checked="">
               <span>Make Bulma great again</span>
