--- a/1stclass/noFramework/vue.html
+++ b/1stclass/noFramework/vue.html
@@ -24,14 +24,14 @@
           <img src="https://bulma.io/images/bulma-logo-white.png" width="112" height="28">
         </a>
 
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarExample">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
         </a>
       </div>
 
-      <div id="navbarBasicExample" class="navbar-menu">
+      <div id="navbarExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item">
             Home
